force-app/main/default/objects/Contender__c/Contender__c.object-meta.xml
<CustomObject>
    <description>Represents an applicant who might apply for one or more positions.</description>
    <label>Contender</label>
    <nameField>
        <label>Contender Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contenders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>