force-app/main/default/objects/Contender__c/fields/Contact_Record_for_Contender__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_for_Contender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the Contender also has a Contact record, you can link the two records by selecting the Contact here.</inlineHelpText>
    <label>Contact Record for Contender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contenders</relationshipLabel>
    <relationshipName>Contenders</relationshipName>
    <type>Lookup</type>
</CustomField>