force-app/main/default/objects/Contender__c/fields/Current_Most_Recent_Employer_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Current_Most_Recent_Employer_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the employer that this rep is currently working for or worked for most recently.  If the employer is not available in this list, enter the name in the field below. 

This list is based on our Competitor list.</inlineHelpText>
    <label>Current/Recent Employer (if Competitor)</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Contenders</relationshipLabel>
    <relationshipName>Contenders</relationshipName>
    <type>Lookup</type>
</CustomField>