force-app/main/default/objects/Contender__c/fields/Current_Territory_Size__c.field-meta.xml
<CustomField>
    <fullName>Current_Territory_Size__c</fullName>
    <label>Current Territory Size</label>
    <type>TextArea</type>
</CustomField>