force-app/main/default/objects/Contender__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <inlineHelpText>Enter the location of the division for this contender.</inlineHelpText>
    <label>Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>