force-app/main/default/objects/Contender__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <formula>Resource_Pool__r.Hiring_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Manager</label>
    <type>Text</type>
</CustomField>