force-app/main/default/objects/Contender__c/fields/Hiring_Probability__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Probability__c</fullName>
    <inlineHelpText>Auto-populated based on Status.</inlineHelpText>
    <label>Hiring Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>