force-app/main/default/objects/Contender__c/fields/Other_Current_Most_Recent_Employer__c.field-meta.xml
<CustomField>
    <fullName>Other_Current_Most_Recent_Employer__c</fullName>
    <inlineHelpText>If the Contender&apos;s current/most recent employer isn&apos;t available in the list above, please enter the name of the employer here.</inlineHelpText>
    <label>Other Current/Most Recent Employer</label>
    <type>TextArea</type>
</CustomField>