force-app/main/default/objects/Contender__c/fields/Requested_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Requested_Compensation__c</fullName>
    <label>Requested Compensation</label>
    <type>TextArea</type>
</CustomField>