force-app/main/default/objects/Contender__c/fields/Resource_Pool__c.field-meta.xml
<CustomField>
    <fullName>Resource_Pool__c</fullName>
    <inlineHelpText>A collection of all your contenders.  To find yours, type in &quot;Sales Rep.&quot;  If you have access to more than one, it will let you choose the appropriate group when you save.</inlineHelpText>
    <label>Resource Pool</label>
    <referenceTo>Resource_Pool__c</referenceTo>
    <relationshipLabel>Contenders (Resource Pool)</relationshipLabel>
    <relationshipName>Contenders1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>