force-app/main/default/objects/Contender__c/fields/Segment_s__c.field-meta.xml
<CustomField>
    <fullName>Segment_s__c</fullName>
    <label>Segment(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facility Supplies</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>