force-app/main/default/objects/Contender__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Identified</fullName>
            </value>
            <value>
                <fullName>2 - Initial Contact</fullName>
            </value>
            <value>
                <fullName>3 - Mutual Interest</fullName>
            </value>
            <value>
                <fullName>4 - Proceed with Open Hire</fullName>
            </value>
            <value>
                <fullName>5 - Contender Withdrew</fullName>
            </value>
            <value>
                <fullName>6 - Revisit at Later Date</fullName>
            </value>
            <value>
                <fullName>7 - Rejected</fullName>
            </value>
            <value>
                <fullName>8 - Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>