force-app/main/default/objects/Contender__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <inlineHelpText>Enter any relevant notes about the status of this Contender here.</inlineHelpText>
    <label>Status Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>