force-app/main/default/objects/Contender__c/fields/Valid_Non_complete__c.field-meta.xml
<CustomField>
    <fullName>Valid_Non_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Non-complete</label>
    <type>Checkbox</type>
</CustomField>