force-app/main/default/objects/Contender__c/listViews/All_Active_Contenders.listView-meta.xml
<ListView>
    <fullName>All_Active_Contenders</fullName>
    <columns>NAME</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Segment_s__c</columns>
    <columns>Currently_Employed__c</columns>
    <columns>Current_Most_Recent_Employer_Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>5 - Contender Withdrew,7 - Rejected,8 - Hired</value>
    </filters>
    <label>All Closed Contenders</label>
</ListView>