force-app/main/default/objects/Contender__c/listViews/All_Contenders.listView-meta.xml
<ListView>
    <fullName>All_Contenders</fullName>
    <columns>NAME</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Segment_s__c</columns>
    <columns>Currently_Employed__c</columns>
    <columns>Current_Most_Recent_Employer_Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contenders</label>
</ListView>