force-app/main/default/objects/Contender__c/listViews/All_Facility_Supplies_Contenders.listView-meta.xml
<ListView>
    <fullName>All_Facility_Supplies_Contenders</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Currently_Employed__c</columns>
    <columns>Current_Most_Recent_Employer_Competitor__c</columns>
    <columns>Other_Current_Most_Recent_Employer__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Hiring_Probability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment_s__c</field>
        <operation>includes</operation>
        <value>Facility Supplies</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>7 - Rejected,8 - Hired</value>
    </filters>
    <label>All Facility Supplies Contenders</label>
</ListView>