force-app/main/default/objects/Contender__c/listViews/My_Contenders.listView-meta.xml
<ListView>
    <fullName>My_Contenders</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Hiring_Probability__c</columns>
    <columns>Currently_Employed__c</columns>
    <columns>Current_Most_Recent_Employer_Competitor__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>5 - Contender Withdrew,7 - Rejected,8 - Hired</value>
    </filters>
    <label>My Active Contenders</label>
</ListView>